cicddemoapp/cicddemoapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-app-demo
  namespace: share-app
  labels:
    app: cicd-app-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cicd-app-demo
  template:
    metadata:
      labels:
        app: cicd-app-demo
    spec:
      containers:
        - name: cicd-app-demo
          image: ghcr.io/tonystarkms/flask-webapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cicd-app-demo-svc
  namespace: share-app
  labels:
    app: cicd-app-demo
spec:
  selector:
    app: cicd-app-demo
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
